# ZynqMP_DMA_UIO_Driver-

./: CMakeLists.txt  LICENSE  readme.md  userspace_dma_test  userspace_dma_test.cpp  xzdma.h
common/: xil_io.h  xil_printf.c  xil_printf.h  xil_sleepcommon.c
example/: userspace_dma_driver_test.cpp
lib/: udmabuf.h  uio.h  zynqmp_userspace_dma_driver.cpp  zynqmp_userspace_dma_driver.h
lib/xilinx_drivers/: xplatform_info.c  xzdma.c  xzdma.h  xzdma_hw.h
